fix bug where NotFound component was hidden behind navbar

--- a/src/styles/application.scss
+++ b/src/styles/application.scss
@@ -53,7 +53,7 @@ body {
 }
 
 .page-layout {
-  padding: 130px 20px 50px 20px;
+  padding: 80px 20px 50px 20px;
   &.reduced-padding {
     padding-top: 50px;
   }
@@ -61,7 +61,7 @@ body {
     padding-top: 80px + 50px;
   }
   @media (max-width: 768px) {
-    padding: 130px 20px 50px 20px;
+    padding: 80px 20px 50px 20px;
   }
 }
 
